--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:55000/sweater
-spring.datasource.username=postgres
-spring.datasource.password=postgrespw
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/sweater
+spring.datasource.username=admin
+spring.datasource.password=123
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+#spring.flyway.baselineOnMigrate = true
 
 spring.freemarker.expose-request-attributes=true
 
